tests/invalid/strict_missing.php
<?php

namespace StrictMissing;

function example(): void
{
}

